styles/style.css
*{
    box-sizing: border-box; 
    padding:0;
    margin:0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    word-spacing: 4px;
}
img{
    height:100%;
}
/* utilities */
.container{
    width:100%;
    padding: 15% 10%;
}
h1{
    font-size:20px;
}
h2{
    font-size:16px;
}
.white{
    color:white;
}
.trans{
    color:rgba(255, 255, 255, 0.8);
}
.grey{
    color:#5b5b5b;
}
.light-grey{
    color:#6e6e6e;
}
/* Hero section */
.hero{
    background: url('../content/hero-bg1.svg'), url('../content/hero-bg2.png'),url('../content/hero-bg3.jpg');
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}
.hero > .container{
    padding-bottom: 30%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
}
.hero h1,.hero p{
    text-align: center;
}
.hero__img{
    width:52px;
    height:52px;
    background: #4eb490;
    border-radius: 50px;
}
/* slogan */
.slogan{
    text-align: center;
}
/* info section */
.info__card{
    display:flex;
    flex-direction: column;
}
.info__img{
    height: 60%;
}
.info__img img{
    width:100%;
}

